trunk/Archive2/dc/f8d2287997af1f/output
main.cpp:6:21: error: non-constant-expression cannot be narrowed from type 'char' to 'unsigned char' in initializer list [-Wc++11-narrowing]
    unsigned char d{c};
                    ^
main.cpp:6:21: note: override this message by inserting an explicit cast
    unsigned char d{c};
                    ^
                    static_cast<unsigned char>( )
1 error generated.
