trunk/Archive2/dc/f8d2287997af1f/main.cpp


int main()
{
    char c = 'a';
    unsigned char d{c};
    return d;
}
